# depoly-sys

./: .gitignore
admin/: package-lock.json  package.json
admin/public/: api_uri.js  index.html
admin/src/: App.css  App.js  Login.css  Login.jsx  index.js
crates/central-service/: .env  Cargo.toml  config.toml  depoly_sys.db.file.db
crates/central-service/admin/: asset-manifest.json  index.html
crates/central-service/admin/static/css/: main.30db9229.css  main.30db9229.css.map
crates/central-service/admin/static/js/: main.87445061.js  main.87445061.js.LICENSE.txt
crates/central-service/entity/: mod.rs
crates/central-service/logs/: service.log.2023-06-08-02  service.log.2023-06-08-03  service.log.2023-06-08-05  service.log.2023-06-08-06
crates/central-service/sqlite_db/: depoly_sys.db
crates/central-service/src/: main.rs
crates/central-service/src/entity/: host_tb.rs  prelude.rs  project_tb.rs
crates/central-service/src/mysql/entity/: project_tb.rs
crates/depoly-client/: Cargo.toml
crates/depoly-client/src/: main.rs
crates/file-core/: Cargo.toml
crates/file-core/src/: lib.rs
crates/target-client/: Cargo.toml  config.toml
crates/target-client/logs/: service.log.2023-06-07-09
crates/target-client/src/: main.rs
