[package]
name = "central-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-core = {path = "../file-core"}
tokio = { version = "1.28.2", features = ["macros"] }
salvo = {version = "0.42.1",features = ["jwt-auth"]}
config-file = "0.2.3"
serde = "1.0.163"
tracing-subscriber = {version =  "0.3.17",features = ["env-filter","time","local-time"]}
tracing-appender = "0.2.2"
tracing = "0.1.37"
time = { version = "0.3.21", features = ["macros"] }
anyhow = "1.0.71"
serde_json = "1.0.96"
reqwest = { version = "0.11.18", features = ["json","multipart"] }
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
jsonwebtoken = "8.0"
chrono = "0.4.26"
uuid = {version = "1.3.3",features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
md5 = "0.7.0"