[package]
name = "deploy-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-core = {path = "../file-core"}
clap = {version = "4.3.2",features = ["derive"]}
anyhow = "1.0.71"
uuid = {version = "1.3.3",features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

reqwest = { version = "0.11.18", features = ["json","blocking","multipart"] }
serde_json = "1.0.96"
#progress = "0.2.0"
indicatif = "0.17.9"