[package]
name = "target-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
file-core = {path = "../file-core"}
tokio = { version = "1.28.2", features = ["macros"] }
salvo = "0.42.1"
config-file = "0.2.3"
serde = "1.0.163"
tracing-subscriber = {version =  "0.3.17",features = ["env-filter","time","local-time"]}
tracing-appender = "0.2.2"
tracing = "0.1.37"
time = { version = "0.3.21", features = ["macros"] }
anyhow = "1.0.71"
serde_json = "1.0.96"